<resources>
    <string name="app_name">Mudra</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="forgot_password"><u>forgot password</u></string>
    <string name="not_registered_yet_sign_up">Not registered yet? Sign up !</string>
    <string name="entr_pass">Enter password.</string>
    <string name="entr_user">Enter username.</string>
    <string name="email">Email</string>
    <string name="add">Address</string>
    <string name="Rs">\u20B9</string>
    <string name="phone_no">Phone No.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="entr_email">Enter email address.</string>
    <string name="entr_phone">Enter Phone No.</string>

    <string name="email_verify">Please verify email address.</string>
    <string name="phone_verify">Please verify Phone No.</string>

    <string name="valid_email">Enter valid email address.</string>
    <string name="psswrd_mathces">Confirm password does not mathes the password.</string>
    <string name="internet_connection">No internet connection.</string>
    <string name="i_am_primarily_a">I am primarily a...</string>

    <string name="othersetting">Other</string>
    <string name="accsetting">Account Settings</string>
    <string name="profilesetting">Profile</string>
    <string name="inviteFsetting">Invite Friends</string>
    <string name="inviteFDescsetting">Invite contacts from your phone</string>
    <string name="privacysetting">Privacy Policy</string>
    <string name="privacyDescsetting">Open our privacy policy</string>
    <string name="termssetting">Terms &amp; Conditions</string>
    <string name="termsDescsetting">Open our Terms &amp; consitions</string>
    <string name="helpsetting">Help &amp; Support</string>
    <string name="helpDescsetting">Feel free to Contact Us</string>
    <string name="notificationsetting">Notification</string>
    <string name="messagesetting">Message</string>

    <!-- Dashboard-->
    <string name="headingLabel">Our Medicine Brand</string>
</resources>
