<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/colorLightRed" />

    <WebView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/webview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/update">

        <LinearLayout
            android:id="@+id/middle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="vertical">

            <com.mudra.custom_fonts.TypefaceTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:text="@string/accsetting"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:typeface_custom="CenturyGothicBold.ttf" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.mudra.custom_fonts.TypefaceTextView
                    android:id="@+id/profileLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:text="@string/profilesetting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:typeface_custom="CenturyGothicBold.ttf" />

                <ImageView
                    android:id="@+id/profileArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:background="@drawable/frwrd_button" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1sp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.mudra.custom_fonts.TypefaceTextView
                    android:id="@+id/notificationLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_toLeftOf="@+id/notificationSwitch"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:text="@string/notificationsetting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:typeface_custom="CenturyGothicBold.ttf" />

                <Switch
                    android:id="@+id/notificationSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_20sdp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1sp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGray"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <com.mudra.custom_fonts.TypefaceTextView
                    android:id="@+id/messageLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_toLeftOf="@+id/messageSwitch"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:text="@string/messagesetting"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:typeface_custom="CenturyGothicBold.ttf" />

                <Switch
                    android:id="@+id/messageSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_20sdp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.1sp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@color/colorGray"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <com.mudra.custom_fonts.TypefaceTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:text="@string/othersetting"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    app:typeface_custom="CenturyGothicBold.ttf" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.mudra.custom_fonts.TypefaceTextView
                        android:id="@+id/inviteFriendLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:text="@string/inviteFsetting"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        app:typeface_custom="CenturyGothicBold.ttf" />

                    <com.mudra.custom_fonts.TypefaceTextView
                        android:id="@+id/inviteFriendesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/inviteFriendLabel"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:text="@string/inviteFDescsetting"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/_8sdp"
                        app:typeface_custom="CenturyGothicBold.ttf" />

                    <ImageView
                        android:id="@+id/inviteFriendArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:background="@drawable/frwrd_button" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1sp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorGray" />

                <RelativeLayout
                    android:id="@+id/privacyLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.mudra.custom_fonts.TypefaceTextView
                        android:id="@+id/privatePolicyLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:text="@string/privacysetting"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        app:typeface_custom="CenturyGothicBold.ttf" />

                    <com.mudra.custom_fonts.TypefaceTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/privatePolicyLabel"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:text="@string/privacyDescsetting"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/_8sdp"
                        app:typeface_custom="CenturyGothicBold.ttf" />

                    <ImageView
                        android:id="@+id/privatePolicyArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:background="@drawable/frwrd_button" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1sp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorGray" />

                <RelativeLayout
                    android:id="@+id/termLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.mudra.custom_fonts.TypefaceTextView
                        android:id="@+id/termsLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:text="@string/termssetting"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        app:typeface_custom="CenturyGothicBold.ttf" />

                    <com.mudra.custom_fonts.TypefaceTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/termsLabel"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:text="@string/termsDescsetting"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/_8sdp"
                        app:typeface_custom="CenturyGothicBold.ttf" />

                    <ImageView
                        android:id="@+id/termsArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:background="@drawable/frwrd_button" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1sp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorGray" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <com.mudra.custom_fonts.TypefaceTextView
                        android:id="@+id/helpLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:text="@string/helpsetting"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        app:typeface_custom="CenturyGothicBold.ttf" />

                    <com.mudra.custom_fonts.TypefaceTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/helpLabel"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginLeft="@dimen/_20sdp"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:paddingLeft="@dimen/_5sdp"
                        android:paddingRight="@dimen/_5sdp"
                        android:text="@string/helpDescsetting"
                        android:textColor="@color/colorGray"
                        android:textSize="@dimen/_8sdp"
                        app:typeface_custom="CenturyGothicBold.ttf" />

                    <ImageView
                        android:id="@+id/helpArrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_20sdp"
                        android:background="@drawable/frwrd_button" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>