<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal|center_vertical"
        android:background="@color/colorBg"
        android:padding="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/login_logo" />

            <LinearLayout
                android:id="@+id/middle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_40sdp"
                android:orientation="vertical">

                <com.mudra.custom_fonts.TypefaceTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/username"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/_12sdp"
                    app:typeface_custom="CenturyGothicBold.ttf" />

                <com.mudra.custom_fonts.TypefaceEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@android:color/transparent"
                    android:hint="@string/username"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/_12sdp"
                    app:typeface_custom="CenturyGothicBold.ttf" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1sp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@color/colorGray" />

                <com.mudra.custom_fonts.TypefaceTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/password"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/_12sdp"
                    app:typeface_custom="CenturyGothicBold.ttf" />

                <com.mudra.custom_fonts.TypefaceEditText
                    android:id="@+id/passwrd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/_5sdp"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/_12sdp"
                    app:typeface_custom="CenturyGothicBold.ttf" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1sp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@color/colorGray" />

                <com.mudra.custom_fonts.TypefaceTextView
                    android:id="@+id/forgot_passwrd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/_10sdp"
                    app:typeface_custom="CenturyGothicBold.ttf" />

                <LinearLayout
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@color/colorLightRed"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp">

                    <com.mudra.custom_fonts.TypefaceTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableRight="@drawable/frwrd_button"
                        android:text="Login"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_12sdp"
                        app:typeface_custom="CenturyGothicBold.ttf" />
                </LinearLayout>

                <com.mudra.custom_fonts.TypefaceTextView
                    android:id="@+id/registered_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@android:color/transparent"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/not_registered_yet_sign_up"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/_15sdp"
                    app:typeface_custom="CenturyGothicBold.ttf" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>